# ParallelPerceptron

./: README.md
Data/: generate_data.py  generate_test.py
Erick/: Makefile  perceptron.c  test_func.c  utils.c  utils.h
Erick/Magic/: Magic-Train1  Magic-Train2
Objet/: CMakeLists.txt
Objet/include/: PerceptronIterParamMix.h  data.h  parallelPerceptron.h  perceptron.h
Objet/src/: CMakeLists.txt  PerceptronIterParamMix.cpp  data.cpp  main.cpp  main_parallel.cpp  main_parammix.cpp  parallelPerceptron.cpp  perceptron.cpp  points.cpp
